2004-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el: Rewrite.

2004-04-12  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @indicateurl, @LaTeX, @ordf, @ordm.
	@url is now a synonym for @uref.

2004-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-anchors): No need to enable evaporation of
	overlays in XEmacs.

	* shimbun/sb-nikkei.el (shimbun-nikkei-prepare-article-markets):
	Don't show garbages if the article seems to have been expired.

2004-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-default):
	Replace `shimbun-make-header' with `shimbun-create-header' in
	order to normalize subject strings; don't make any modifications
	on subject strings in advance.
	(shimbun-nikkei-get-headers-top): Ditto.
	(shimbun-nikkei-get-headers-markets): Ditto.
	(shimbun-nikkei-get-headers-sports): Ditto.
	(shimbun-nikkei-get-headers-newpro): Ditto.
	(shimbun-nikkei-get-headers-release): Ditto.
	(shimbun-nikkei-get-headers-shasetsu): Ditto.
	(shimbun-nikkei-get-headers-okuyami): Ditto.

2004-04-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-2ch.el (shimbun-2ch-group-alist): Declared as an
	option.
	* shimbun/sb-chalow.el (shimbun-chalow-group-alist): Ditto.
	* shimbun/sb-hns.el (shimbun-hns-group-alist): Ditto.

	* shimbun/sb-cgi-board.el: New file.

2004-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el: Rewrite.

	* shimbun/shimbun.el (shimbun-x-face): Don't use cached faces.

2004-04-08  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m.el (w3m-delete-all-overlays): Revert.
	(w3m-highlight-current-anchor): Ditto.

2004-04-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-all-overlays): Remove.

2004-04-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-bitmap.el (w3m-bitmap-image-insert): Enable the evaporate
	property on overlays.

	* w3m-e21.el (w3m-form-make-button): Enable the evaporate property
	on buttun overlays.
